# hoangsa

./: .gitignore  .memoryignore  .thothignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  README.vi.md  package.json  rust-toolchain.toml
.claude-plugin/: marketplace.json
.claude/hoangsa/workflows/: cook.md  prepare.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: helpers.rs  main.rs
cli/src/cmd/: addon.rs  budget.rs  config.rs  context.rs  hook.rs  media.rs  mod.rs  model.rs  pref.rs  rule.rs  state.rs  stats.rs  trust.rs  validate.rs  verify.rs
cli/tests/: integration_budget.rs
crates/hoangsa-cli/: Cargo.toml  README.md
crates/hoangsa-cli/src/: codex_wire.rs  helpers.rs  lib.rs  main.rs
crates/hoangsa-cli/tests/: envelope_model_gate.rs  hook_dispatch_parity.rs  integration_budget.rs  integration_install.rs  integration_pref.rs  integration_prompt_guard.rs  integration_stats.rs
crates/hoangsa-memory/: Cargo.toml  README.md
crates/hoangsa-memory-core/: Cargo.toml  README.md
crates/hoangsa-memory-core/src/: error.rs  event.rs  lib.rs  memory.rs  mode.rs  projects.rs  query.rs
crates/hoangsa-memory-graph/: Cargo.toml  README.md
crates/hoangsa-memory-graph/src/: analytics.rs  lib.rs  taint.rs
crates/hoangsa-memory-graph/tests/: graph_smoke.rs
crates/hoangsa-memory-mcp/: Cargo.toml  README.md
crates/hoangsa-memory-mcp/src/: lib.rs  main.rs  proto.rs  sanitize.rs  server.rs  service.rs
crates/hoangsa-memory-mcp/src/server/: archive_tools.rs  catalog.rs  dispatch.rs  graph_tools.rs  memory_tools.rs  mod.rs  recall_tools.rs  transport.rs  watcher.rs
crates/hoangsa-memory-mcp/tests/: catalog_dispatch_parity.rs  no_orphan_tools.rs  rpc.rs  socket.rs
crates/hoangsa-memory-parse/: Cargo.toml  README.md
crates/hoangsa-memory-parse/src/: language.rs  lib.rs  pdg.rs  walk.rs  watch.rs
crates/hoangsa-memory-parse/tests/: smoke.rs
crates/hoangsa-memory-policy/: Cargo.toml  README.md
crates/hoangsa-memory-policy/assets/: rules.default.toml
crates/hoangsa-memory-policy/src/: cap.rs  config.rs  lesson_matcher.rs  lib.rs  manager.rs  rules.rs  text_sim.rs
crates/hoangsa-memory-policy/tests/: forget_pass.rs
crates/hoangsa-memory-retrieve/: Cargo.toml  README.md
crates/hoangsa-memory-retrieve/benches/: recall.rs
crates/hoangsa-memory-retrieve/src/: archive.rs  config.rs  enrich.rs  indexer.rs  lib.rs  retriever.rs
crates/hoangsa-memory-retrieve/tests/: e2e.rs  pdg.rs  purge.rs  recall_accuracy.rs  streaming_embed.rs
crates/hoangsa-memory-store/: Cargo.toml  README.md
crates/hoangsa-memory-store/assets/: chroma_sidecar.py
crates/hoangsa-memory-store/benches/: graph_bfs.rs  kv_ops.rs
crates/hoangsa-memory-store/src/: archive.rs  chroma.rs  episodes.rs  fts.rs  kv.rs  lib.rs  markdown.rs  vector.rs
crates/hoangsa-memory-store/tests/: no_embed_marker.rs  smoke.rs
crates/hoangsa-memory/src/: archive_cmd.rs  daemon.rs  daemon_cmd.rs  graph_cmd.rs  index_cmd.rs  init_cmd.rs  lesson_cmd.rs  main.rs  memory_cmd.rs  migration.rs  projects_cmd.rs  query_cmd.rs  resolve.rs  watch_cmd.rs
crates/hoangsa-memory/tests/: integration_graph.rs  integration_taint.rs
crates/hoangsa-proxy/: Cargo.toml  README.md
crates/hoangsa-proxy/bench/: bench.sh
crates/hoangsa-proxy/examples/: cargo_quiet.rhai  git_log.rhai
crates/hoangsa-proxy/src/: ansi.rs  config.rs  doctor.rs  exec.rs  filters.rs  init.rs  lib.rs  main.rs  prefs.rs  registry.rs  report.rs  rhai_engine.rs  scope.rs  tty.rs
crates/hoangsa-proxy/tests/: ansi_integration.rs  bench_cold_start.rs  curl_handler.rs  dashdash_separator.rs  doctor_integration.rs  exec_integration.rs  exit_code_integration.rs  fail_open.rs  filters_unit.rs  hook_integration.rs  pipe_skip.rs  prefs_integration.rs  report_format.rs  rhai_integration.rs  scope_flags.rs  signal_handler.rs  stream_integration.rs  strict_mode.rs
crates/hoangsa-ui-server/: Cargo.toml
crates/hoangsa-ui-server/src/: lib.rs  memory.rs  routes.rs  server.rs
crates/hoangsa-ui-server/tests/: integration_http.rs
crates/hoangsa-ui-web/: package-lock.json  package.json  tsconfig.tsbuildinfo
crates/hoangsa-ui-web/src/: api.ts
crates/thoth-cli/: Cargo.toml
crates/thoth-cli/src/: archive_cmd.rs  daemon.rs  daemon_cmd.rs  hooks.rs  index_cmd.rs  init_cmd.rs  main.rs  memory_cmd.rs  migration.rs  query_cmd.rs  resolve.rs
crates/thoth-core/src/: query.rs
crates/thoth-graph/src/: lib.rs
crates/thoth-mcp/: Cargo.toml
crates/thoth-mcp/src/: lib.rs  main.rs  proto.rs  server.rs
crates/thoth-mcp/tests/: rpc.rs  socket.rs
crates/thoth-retrieve/: Cargo.toml
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-linux-x64-musl/: package.json
npm/cli-windows-x64/: package.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: hoangsa-reviewer.md  hoangsa-simplify.md  hoangsa-worker-impl.md  hoangsa-worker-readonly.md
plugin/commands/: addon.md  audit.md  brainstorm.md  check.md  cook.md  fix.md  help.md  index.md  init.md  menu.md  plate.md  prepare.md  qc.md  research.md  rule.md  serve.md  ship.md  taste.md  update.md
plugin/workflows/: addon.md  common.md  fix.md  git-context.md  index.md  init-detect.md  init.md  menu.md  qc.md  task-link.md  update.md
scripts/: install-local.sh  install.sh  uninstall.sh
scripts/lib/: ui.sh
templates/agents/: hoangsa-reviewer.md  hoangsa-simplify.md  hoangsa-worker-impl.md  hoangsa-worker-readonly.md
templates/snippets/: memory-recall-start.md  memory-reflect-end.md
templates/workflows/: addon.md  audit.md  brainstorm.md  check.md  common.md  cook.md  fix.md  index.md  init.md  menu.md  plate.md  prepare.md  research.md  rule.md  serve.md  ship.md  task-link.md  taste.md  update.md  worker-rules.md
(+146 files in other folders)
