[package]
name = "hoangsa-cli"
version = "0.0.7"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
ab_glyph = "0.2"
image = "0.25"
imageproc = "0.25"
walkdir = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
