[package]
name = "hoangsa-cli"
version = "0.1.3"
edition = "2024"

[features]
default = []
media = ["dep:ab_glyph", "dep:image", "dep:imageproc", "dep:walkdir"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
ab_glyph = { version = "0.2", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.25", optional = true, default-features = false }
walkdir = { version = "2", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
