[package]
name = "thoth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The `hoangsa-memory` command-line interface (memory + code-intelligence for hoangsa-cc)."

[[bin]]
name = "hoangsa-memory"
path = "src/main.rs"

[features]
default   = []
anthropic = ["dep:reqwest"]

[dependencies]
thoth-core     = { workspace = true }
thoth-parse    = { workspace = true }
thoth-store    = { workspace = true }
thoth-retrieve = { workspace = true }
thoth-memory   = { workspace = true }
thoth-mcp      = { workspace = true }

blake3               = { workspace = true }
tokio                = { workspace = true, features = ["signal", "process", "io-std", "net"] }
anyhow               = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
toml                 = { workspace = true }
time                 = { workspace = true }
clap                 = { workspace = true }
indicatif            = "0.18"
reqwest              = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
